# neurotheque_resources

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TESTING.md  combine_py_files.py  combined_code.py  config_schema.json  dsi_bids.py  environment.yml  event_mapping.py  export_repo_structure.py  export_repo_to_xml.py  gitattributes.conf  gonogo_processing_summary.md  mkdocs.yml  preprocess_batch.py  preprocess_single.py  pyproject.toml  repo_structure.txt  requirements-dev.txt  requirements.txt  test.py
.github/workflows/: ci.yml  format.yml
config/: pipeline_config.yml
configs/: fivepoint_bids.json  fivepoint_pipeline.json  fivepoint_pipeline.yml  global_preprocessing.yaml  gonogo_advanced_pipeline.yml  gonogo_analysis.yml  gonogo_bids.json  gonogo_intermediate_pipeline.yml  gonogo_minimal_pipeline.json  gonogo_minimal_pipeline.yml  gonogo_only.yaml  mario_general_bids.json  neurotheque_bids_pipeline.json  pilot_preprocessing_strategy.yml  single_task_preprocessing_strategy.yml  task_splitting_pipeline.yml  textsemantic_bids.json
configs/drafts/: .gitkeep  global_preprocessing.yaml  gonogo_only.yaml  pipeline_config.yml
configs/examples/: fivepoint.json  gonogo.json  pipeline_config.yml
data/processed/: autoreject_log.pickle
docs/: cli-reference.md  concepts.md  direct_step_usage.md  faq.md  index.md  quick-start.md
docs/api/: pipeline.md  steps.md
examples/: bidsify_mario.py  fixed_fivepoint_preprocessing.py  working_with_autoreject_logs.ipynb
notebooks/analysis/: Fivepoint_analysis.ipynb  GoNoGo_Analysis_Demo.ipynb
notebooks/preprocessing/: Fivepoint_preprocessing copy 2.ipynb  Fivepoint_preprocessing copy.ipynb  gonogo_intermediate_preprocessing.ipynb  gonogo_minimal_preprocessing.ipynb  mario_preprocessing.py  pilot_preprocessing_strategy.ipynb
notebooks/tutorials/: DSI24_EEG_Triggering_CodeSnippets_QuickReference copy.ipynb
reports/gonogo/: gonogo_analysis_report.html
scr/: __init__.py  cli.py  config_generator.py  config_schema.json  pipeline.py  pipeline.py.tmp  registery.py  registry.py
scr/analysis/: __init__.py  erp_visualization.py  fivepoint_analysis.py  mario_analysis.py
scr/preprocessing/: global_and_task_preprocessing.py
scr/steps/: __init__.py  auto_save.py  autoreject.py  base.py  baseline_correction.py  epoching.py  epoching_gonogo.py  filter.py  generate_report.py  gonogo_analysis.py  gonogo_analysis_v2.py  ica.py  ica_extraction.py  ica_labeling.py  (+13 more)
scripts/: dsi_to_bids.py
tests/: README.md  run_tests.py  test_bidsify_and_events.py
(+54 files in other folders)
